syntax = "proto3";
package ibc.account;

import "google/protobuf/any.proto";

option go_package = "github.com/chainapsis/cosmos-sdk-interchain-account/x/ibc-account/types";

message IBCTxRaw {
    bytes body_bytes = 1;
}

message IBCTxBody {
    repeated google.protobuf.Any messages = 1;
}

enum Type {
    REGISTER = 0;
    RUNTX = 1;
}

message IBCAccountPacketData {
    Type type = 1;
    bytes data = 2;
}

message IBCAccountPacketAcknowledgement {
    Type type = 1;
    string chainID = 2;
    uint32 code = 3;
    bytes data = 4;
    string error = 5;
}
